syntax = "proto3";

package protocol;

// Controller определяет клавиши управления
message Controller {
	bool MoveForward = 1;
	bool MoveBackward = 2;
	bool MoveLeft = 3;
	bool MoveRight = 4;
	bool RotateLeft = 5;
	bool RotateRight = 6;

		// Modifiers определяет клавиши-модификаторы
		message Modifiers {
        	bool Shift = 1; 
        	bool Ctrl = 2;
        	bool Alt = 3;
        	bool Meta = 4;
		}
	
        Modifiers modifiers = 7;
}

message Vec3 {
	double X = 1;
	double Y = 2;
	double Z = 3;
}

// PlayerPosition определяет позицию и движение игрока
message PlayerPosition {
	// Position определяет положение игрока
	Vec3 Position = 1;
	// Motion определяет движение игрока
	Vec3 Motion = 2;
	// Angle определяет направление игрока (угол между положительным направленим оси Y и направлением игрока по часовой стрелке)
	double Angle = 3;
	// Slew определяет поворот игрока
	double Slew = 4;
}

// MessageType определяет типы сообщений
enum MessageType
{
	MsgController = 0;
	MsgPlayerPosition = 1;
}

// MessageItem определяет одно сообщение
message MessageItem
{
    MessageType Type = 1;
    bytes Body = 2;
}

// MessageContainer определяет несколько сообщений
message MessageContainer
{
    repeated MessageItem Messages = 1;
}